# airflow-and-minio-example

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  generate_mocked_ops.py  pyproject.toml  requirements.txt  run.py
airflow_config/: airflow.cfg  variables.json
notebooks/: exploratory_yfinance.ipynb  yfinance.cache
src/: setup.py
src/dags/: dag.py
src/stock_portfolio_data/: custom_session.py  main.py  minio.py  minio_client.py  pre_process.py  stock.py  symbols.py  yf_api.py
src/utils/: logger.py
